css/styles.css
/* ... */
.item-one,
.item-two {
  display: grid;
  gap: 0.5rem;
  grid-template-areas:
    "item-grid1 item-grid2"
    "item-grid1 item-grid3";
}

.item-grid1 {
  grid-area: item-grid1;
}

.item-grid2 {
  grid-area: item-grid2;
}

.item-grid3 {
  grid-area: item-grid3;
}

.item-one-total-counter,
.item-two-total-counter {
  display: flex;
  border: var(--border) white;
  width: 30vw;
  justify-content: space-between;
  background-color: white;
}

.item-card {
  display: grid;
  justify-items: center;
  grid-template-areas:
    "checkout-grid1 checkout-grid1"
    "checkout-grid2 checkout-grid3"
    "checkout-grid4 checkout-grid4"
    "checkout-grid5 checkout-grid5";
}

.checkout-grid1 {
  grid-area: checkout-grid1;
}

.checkout-grid2 {
  grid-area: checkout-grid2;
}

.checkout-grid3 {
  grid-area: checkout-grid3;
}

.checkout-grid4 {
  grid-area: checkout-grid4;
}

.checkout-grid5 {
  grid-area: checkout-grid5;
}

.checkout-item-one,
.item-one-price {
  margin-bottom: 1rem;
}

.checkout-page {
  background-color: var(--light-grey);
  padding: 2rem 0;
  height: 125vh;
}

.checkout-card {
  background-color: white;
  border: var(--border) black;
  padding: 1rem;
  width: 90vw;
  margin: 0 auto;
  animation: fade 250ms ease-in-out forwards;
}

.checkout-card.active {
  animation: slide 250ms 125ms ease-in-out both;
}

.checkout-form-group {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  margin-bottom: 0.5rem;
}

.checkout-form-group > input {
  border: var(--border) black;
  width: 70vw;
  margin: 0.5rem 0 1rem 0;
  padding: 0.5rem;
  font-size: 1rem;
}

.checkout-form-buttons {
  display: flex;
  gap: 1rem;
}

.user-info-card,
.shipping-card {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.multi-step-form {
  overflow: hidden;
  position: relative;
}

.hide {
  display: none;
}

@keyframes slide {
  0% {
    transform: translateX(200%);
    opacity: 0;
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes fade {
  0% {
    transform: scale(1);
    opacity: 1;
  }

  50% {
    transform: scale(0.75);
    opacity: 0;
  }

  100% {
    opacity: 0;
    transform: scale(0);
  }
}

.progress-bar {
  display: flex;
  gap: 2rem;
  justify-content: center;
  margin-bottom: 3rem;
}

.progress-step {
  background-color: white;
  width: 30px;
  height: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
}

.progress-active {
  background-color: var(--dark-blue);
  color: white;
}

.create-account-login {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.item-one-total-counter button,
.item-two-total-counter button {
  width: 20px;
}

.modal {
  text-align: center;
  padding: 1em;
  max-width: 50ch;
  border: 0;
  box-shadow: 0 0 1em rgb(0 0 0 / 0.3);
}

.modal-buttons {
  gap: 1rem;
  margin-top: 1rem;
}

/* FORMS */

.validator-container {
  display: none;
  border: var(--border) green;
  color: green;
  width: 300px;
  margin: 1rem auto;
  padding: 0.3rem 0.5rem;
  text-align: center;
}

.form-error {
  display: none;
  color: red;
  font-size: 0.8rem;
  margin-bottom: 1rem;
}

.form-page {
  margin: 3rem 0;
}

.form-page form,
.contact-form,
.customer-service-content,
.create-account-form,
.sell-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-decoration: none;
  color: black;
  border: 1px solid black;
  padding: 1rem;
  border-radius: 10px;
  background-color: lightgrey;
  width: 80vw;
  margin: 0 auto;
}

.form-page * input,
.contact-form input,
.create-account-form input,
.sell-form input {
  width: 100%;
  margin: 0.5rem 0;
  padding: 0.5rem;
  font-size: 1rem;
}

.create-account-form {
  margin: 2rem 0;
}

.form-btn {
  color: white;
  margin: 1rem 0;
}

.contact-form {
  margin-bottom: 3rem;
}

.customer-service-content {
  margin-top: 3rem;
}

.sell-form {
  margin: 2rem 0;
}

.sell-form-radio {
  display: grid;
  gap: 1rem;
  margin-top: 1rem;
  justify-items: center;
  grid-template-areas:
    "radio1 radio2"
    "radio3 radio4";
}

.radio1 {
  grid-area: radio1;
}

.radio2 {
  grid-area: radio2;
}

.radio3 {
  grid-area: radio3;
}

.radio4 {
  grid-area: radio4;
}

/* TEXT */

.header-one {
  color: var(--dark-blue);
  font-family: "Tourney", sans-serif;
  margin: 2rem 0;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

h1 {
  font-size: 2rem;
  color: white;
  text-align: center;
}

.footer-second a,
.footer-third a {
  color: white;
}

h4 {
  font-size: 1.5rem;
}

h5 {
  font-size: 1rem;
}

.powered-by {
  margin-top: 2rem;
}

.powered-by a {
  color: white;
}

.sloagan-text {
  font-size: 1em;
}

/* ICONS */

.material-icons {
  position: relative;
}

.material-icons:hover {
  cursor: pointer;
}

.material-icons.md-48 {
  font-size: 3rem;
}

.material-icons.md-36 {
  font-size: 2.25rem;
}

.material-icons.md-24 {
  font-size: 1.5rem;
}

.material-icons.md-18 {
  font-size: 1.12rem;
}

.right-nav-icon {
  color: var(--dark-blue);
}

.header-search-icon {
  color: white;
}

.header-icons {
  display: flex;
  gap: 1rem;
}

.footer-icons {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.footer-icons i {
  font-size: 2rem;
}

.user-badges {
  display: flex;
  gap: 1rem;
  margin-top: 1rem;
  font-size: 1rem;
}

.user-badges span {
  color: var(--dark-blue);
}

.cart-cta-icon {
  color: white;
  margin-right: 0.5rem;
}

.profile-icons:hover {
  cursor: default;
}

/* NAVIGATION */

.navbar,
.navbar ul,
.nav-item {
  padding: 0;
  margin: 0;
  text-decoration: none;
  list-style-type: none;
}

.navbar {
  background-color: var(--dark-blue);
  position: absolute;
  display: none;
  top: 170px;
  padding: 1rem 0;
}

.nav-menu {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  width: 100vw;
  justify-items: center;
  align-items: center;
}
/* ... */

